# Exercism

./: CMakeLists.txt  README.md
exercises/: CMakeLists.txt
exercises/CollatzConjecture/: collatz_conjecture.cpp  collatz_conjecture.h
exercises/DifferenceOfSquares/: difference_of_squares.cpp  difference_of_squares.h
exercises/GradeSchool/: grade_school.cpp  grade_school.h
exercises/Grains/: grains.cpp  grains.h
exercises/Hamming/: hamming.cpp  hamming.h
exercises/Leap/: leap.cpp  leap.h
exercises/NthPrime/: nth_prime.cpp  nth_prime.h
exercises/NucleotideCount/: nucleotide_count.cpp  nucleotide_count.h
exercises/Pangram/: pangram.cpp  pangram.h
exercises/Raindrops/: raindrops.cpp  raindrops.h
exercises/ReverseString/: reverseString.cpp  reverseString.h
exercises/RnaTrabscription/: rna_transcription.cpp  rna_transcription.h
exercises/SpaceAge/: spaceAge.cpp  spaceAge.h  space_age.cpp  space_age.h
exercises/Triangle/: triangle.cpp  triangle.h
exercises/TwoFer/: two_fer.cpp  two_fer.h
src/: CMakeLists.txt  main.cpp  tempCodeRunnerFile.cpp
